syntax = "proto3";

package crescent.bootstrap.v1beta1;

import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "cosmos/base/v1beta1/coin.proto";
import "google/protobuf/timestamp.proto";
import "crescent/bootstrap/v1beta1/bootstrap.proto";

option go_package                      = "github.com/crescent-network/crescent/v4/x/bootstrap/types";
option (gogoproto.goproto_getters_all) = false;

// Msg defines the bootstrap Msg service.
service Msg {
  rpc LimitOrder(MsgLimitOrder) returns (MsgLimitOrderResponse);
  rpc ModifyOrder(MsgModifyOrder) returns (MsgModifyOrderResponse);
}

// MsgLimitOrder defines an SDK message for making a limit order
message MsgLimitOrder {
  // orderer specifies the bech32-encoded address that makes an order
  string orderer = 1;

  // bootstrap_pool_id specifies the bootstrap pool id
  uint64 bootstrap_pool_id = 2;

  // direction specifies the order direction(buy or sell)
  OrderDirection direction = 3;

  // offer_coin specifies the amount of coin the orderer offers
  cosmos.base.v1beta1.Coin offer_coin = 4 [(gogoproto.nullable) = false];

  // fee specifies the amount of fee
  cosmos.base.v1beta1.Coin fee = 5 [(gogoproto.nullable) = false];

  // demand_coin_denom specifies the demand coin denom
  string demand_coin_denom = 6;

  // price specifies the order price
  string price = 7 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];

  // amount specifies the amount of base coin the orderer wants to buy or sell
  string amount = 8 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
}

// MsgLimitOrderResponse defines the Msg/LimitOrder response type.
message MsgLimitOrderResponse {}

// MsgModifyOrder defines an SDK message for modifying a limit order
message MsgModifyOrder {
  // orderer specifies the bech32-encoded address that modifies an order
  string orderer = 1;

  // bootstrap_pool_id specifies the bootstrap pool id
  uint64 bootstrap_pool_id = 2;

  // order_id specifies the order id
  uint64 order_id = 3;

  // offer_coin specifies the amount of coin the orderer offers
  cosmos.base.v1beta1.Coin offer_coin = 4 [(gogoproto.nullable) = false];

  // fee specifies the amount of fee
  cosmos.base.v1beta1.Coin fee = 5 [(gogoproto.nullable) = false];

  // TODO: TBD, could be removed
  // demand_coin_denom specifies the demand coin denom
  string demand_coin_denom = 6;

  // price specifies the order price
  string price = 7 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];

  // amount specifies the amount of base coin the orderer wants to buy or sell
  string amount = 8 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int", (gogoproto.nullable) = false];
}

// MsgModifyOrderResponse defines the Msg/ModifyOrder response type.
message MsgModifyOrderResponse {}
